--- a/Exercise1.html
+++ b/Exercise1.html
@@ -6,13 +6,26 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
+
 	<nav>
 		<ul>
+			<li><img class="logo" src="tesla-logo.jpg"></li>
 			<li>Home</li>
 			<li><a href="Exercise2.html">Pictures</a></li>
 			<li><a href="#">Contact</a></li>
 			<li><a href="#">About</a></li>
 		</ul>
 	</nav>
+
+	<div id="container">
+		<div class="main">
+			<h1>Elon Musk</h1>
+			<p>A living genius</p>
+		</div>
+
+		<div>
+			<p class="album"><a href="Exercise2.html">Photo album</a></p>
+		</div>
+	</div>
 </body>
 </html>
