adds style sheet

--- a/Exercise1.html
+++ b/Exercise1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Exercise 1</title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="Exercise1.css">
 </head>
 <body>
 
@@ -18,11 +18,15 @@
 	</nav>
 
 	<div id="container">
+
+		
+		<div>
+			<img class:"background" src="elon-musk.jpg" alt="elon">
+		</div>
 		<div class="main">
 			<h1>Elon Musk</h1>
 			<p>A living genius</p>
 		</div>
-
 		<div>
 			<p class="album"><a href="Exercise2.html">Photo album</a></p>
 		</div>
