--- a/Exercise1.html
+++ b/Exercise1.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 
+	<img class="logo" src="tesla-logo.jpg" alt="logo">
+
 	<nav>
 		<ul>
-			<li><img class="logo" src="tesla-logo.jpg"></li>
-			<li>Home</li>
-			<li><a href="Exercise2.html">Pictures</a></li>
-			<li><a href="#">Contact</a></li>
-			<li><a href="#">About</a></li>
+			<li class="link"><a href="Exercise1.html">Home</a></li>
+			<li class="link"><a href="Exercise2.html">Pictures</a></li>
+			<li class="link"><a href="#">Contact</a></li>
+			<li class="link"><a href="#">About</a></li>
 		</ul>
 	</nav>
 
@@ -21,15 +22,16 @@
 
 		
 		<div>
-			<img class:"background" src="elon-musk.jpg" alt="elon">
+			<img class="background" src="elon-musk.jpg" alt="elon">
 		</div>
 		<div class="main">
 			<h1>Elon Musk</h1>
 			<p>A living genius</p>
 		</div>
-		<div>
-			<p class="album"><a href="Exercise2.html">Photo album</a></p>
-		</div>
+		
 	</div>
+		<div class="album">
+			<p><a href="Exercise2.html">Photo album</a></p>
+		</div>
 </body>
 </html>
