--- a/Exercise1.html
+++ b/Exercise1.html
@@ -31,7 +31,7 @@
 		
 	</div>
 		<div class="album">
-			<p><a href="Exercise2.html">Photo album</a></p>
+			<h2><a href="Exercise2.html">Photo album</a></h2>
 		</div>
 </body>
 </html>
